# contract-intelligence-demo

./: .env.example  .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
agents/: .env.example  pyproject.toml
agents/contract_crew/: __init__.py  app_client.py  config.py  crew.py  kinde_auth.py  main.py  runner.py  service.py  tools.py
agents/tests/: test_byok.py  test_wiring.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/guest/: route.ts
app/api/run/: route.test.ts  route.ts
app/api/sample/: route.ts
app/api/upload/: route.test.ts  route.ts
app/dashboard/: actions.ts  page.tsx
app/dashboard/_components/: Audit.tsx  AuthorityGap.tsx  Clauses.tsx  ContractPicker.tsx  Contracts.tsx  CrewInfoModal.tsx  CurrentUserBadge.tsx  GuestSwitcher.tsx  LiveTape.tsx  MapsToApp.tsx  ModeBadge.tsx  ReviewWorkbench.tsx  RoleChooser.tsx  RunConsole.tsx  RunEvents.tsx  RunPanel.tsx  Runs.tsx  SiteFooter.tsx
convex/: agentAuth.ts  agentDelegation.ts  agentIdentity.ts  agentReview.test.ts  agentReview.ts  agents.test.ts  agents.ts  auth.config.ts  authz.ts  authzIntersection.test.ts  chunker.test.ts  chunker.ts  contracts.ts  convex.config.ts  dashboard.ts  demoReset.ts  http.ts  ingest.test.ts  ingest.ts  ingestActions.ts  kindeManagement.ts  runEvents.ts  schema.test.ts  schema.ts  seed.ts  sessionAuth.ts  setup.test.ts  tsconfig.json  upload.ts
docker/weaviate/: docker-compose.yml
docs/: agent-service.md  kinde-setup.md  weaviate-setup.md
fixtures/: acme-msa.txt  globex-nda.txt
lib/: acting-identity.test.ts  acting-identity.ts  agent-run.ts  error-text.test.ts  error-text.ts  ingest-contract.ts  kinde-management.ts  kinde.ts  permissions.ts  sample.ts  weaviate.ts
scripts/: e2e-narrative.ts  embed-contract.ts  provision-agent.sh  repro-confused-deputy.ts  repro-intersection-fix.ts  reset-demo.ts  weaviate-isolation-check.ts  weaviate-up.sh
(+3 files in other folders)
